# onedigit-py

./: .editorconfig  .gitignore  .taplo.toml  LICENSE  Makefile  README.md  onedigit2  pyproject.toml  taskfile.yml
.devcontainer/: devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: ci-python.yml  ci.yml
docs/: development.md  solver.md
docs/images/: diagram.drawio
scripts/: onedigit
src/onedigit/: __init__.py  __main__.py  cli.py  cli2.py  cli_v0.py  combo.py  logger.py  model.py  operations.py  simple.py
tests/: test_cli2.py
tests/test_onedigit/: __init__.py  conftest.py  test_answers.py  test_cli.py  test_cli_v0.py  test_combo.py  test_dunder_main.py  test_model.py
