[build-system]
requires      = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name            = "onedigit"
version         = "0.3.0"
description     = "One-digit arithmetic puzzle solver"
authors         = [
    { name = "Juan Rubio", email = "jcrubio@gmail.com" },
]
license         = "MIT"
readme          = "README.md"
keywords        = [
    "arithmetic-game",
    "math",
    "puzzle",
]
classifiers     = [
    "Environment :: Console",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
requires-python = ">=3.12"
dependencies    = [
    "colorlog>=6.10.1",
]

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.4",                                  # Security linter
    "hypothesis[cli]>=6.152.1",                             # Property-based testing
    "mypy>=1.20.1",                                         # Static type checker
    "pytest-cov>=7.1.0",                                    # Coverage plugin for pytest
    "pytest>=9.0.3",                                        # Testing framework
    "ruff>=0.15.10",                                        # Linter and formatter
    "ty>=0.0.31",                                           # Type checker and language server (by Astral)
    "uv-bump>=0.5.0",
    "vulture>=2.16",                                        # Dead code analysis
]

[project.scripts]
onedigit = "onedigit.cli:app"

[tool.bandit]
exclude_dirs = [
    ".git",
    ".venv*",
]
skips = [
    "B101",     # Using asserts is needed for tests
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.mypy]
check_untyped_defs          = true
disallow_any_generics       = true
disallow_any_unimported     = true # To offset someone having 'ignore_missing_imports'
disallow_incomplete_defs    = true
disallow_untyped_decorators = true
disallow_untyped_defs       = true # TOP
no_implicit_optional        = true
show_column_numbers         = true
show_error_codes            = true
strict                      = true
strict_bytes                = true
warn_redundant_casts        = true
warn_return_any             = true
warn_unreachable            = true
warn_unused_ignores         = true

[tool.pytest.ini_options]
addopts = """\
    -vv
    --no-cov-on-fail
    --cov=onedigit
    --cov-fail-under=80.0
    --strict-config
    --strict-markers
    """
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
norecursedirs = [
    ".*",
    "backups",
    "build",
    "dist",
    "docs",
]
pythonpath = ["src"]
testpaths = [
    "tests",
]
xfail_strict = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "I", # isort
    "W", # pycodestyle
]

[tool.ruff.lint.pydocstyle]

[tool.setuptools]

[tool.setuptools.dynamic]
